# yew-pathfinder

./: Cargo.toml  LICENSE  index.html  tailwind.config.js
src/: board.rs  cell.rs  dropdown.rs  main.rs  nav_state.rs  pathfinder.rs  pathfinding_nav.rs  pathfinding_visualizer.rs  test.rs
styles/: tailwind.css
